src/test/ui/codemap_tests/unicode.stderr
error: invalid ABI: expected one of [cdecl, stdcall, fastcall, vectorcall, aapcs, win64, Rust, C, system, rust-intrinsic, rust-call, platform-intrinsic], found `路濫狼á́́`
  --> $DIR/unicode.rs:12:8
   |
12 | extern "路濫狼á́́" fn foo() {}
   |        ^^^^^^^^

error: aborting due to previous error

